@@ -1,3 +1,8 @@
+2014-05-15  Andy Jackson  <andy@xylanta.com>
+
+	* include/sys/select.h: Make select FD_COPY and FD_ZERO macros single
+	statements. [ Bugzilla 1001986 ]
+
 2012-03-09  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* include/time.h: Add suseconds_t and useconds_t here for now.
@@ -438,7 +443,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2014 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
